Finalizando conponente Countdown

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -30,7 +30,7 @@ a {
     --red: #dc3545;
     --text: #666;
     --text-highlight: #b3bb09ff;
-    -background: #f2f3f5;
+    --background: #f2f3f5;
     --green: #28a745;
     --white: #fff;
     --gray-line: #dcdde0;
